# ZiRAG

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: api.py  config.py  pipeline.py  schema.py
src/llm/: gemini.py
src/rag/: aural.py  base.py  image.py  multimodal.py  text.py  textual.py  visual.py  zirag.py
src/rag/generation/llm/: gemini.py
src/rag/retrieval/: base.py
src/rag/retrieval/audio/: whisper_stt.py
src/rag/retrieval/image/: colqwen2.py
src/rag/retrieval/models/embedder/: audio_embedder.py  sentence_transformer.py
src/rag/retrieval/models/searcher/: bm25.py  hybrid.py
src/rag/retrieval/models/vlm/: colqwen2.py
src/utils/: pdf2img.py  pdf2txt.py  pdftools.py  ragtools.py  txt2emb.py
src/vectorstore/: base.py  indexer.py  qdrant.py
src/vectorstore/indexer/: chromadb.py  qdrant.py
tests/: test_llm.py
ui/: app.py  style.css
