[project]
name = "zirag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "colpali-engine>=0.3.16",
    "google-genai>=2.4.0",
    "google-generativeai>=0.8.6",
    "pillow",
    "pymupdf>=1.27.2.3",
    "python-dotenv",
    "qdrant-client>=1.18.0",
    "torch>=2.11.0",
]

[dependency-groups]
dev = ["mypy>=2.1.0", "pytest>=8.0.0", "ruff>=0.11.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
