[project]
name = "zirag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "colpali-engine>=0.3.16",
    "google-genai>=2.4.0",
    "gradio",
    "openai-whisper",
    "pillow",
    "pymupdf>=1.27.2.3",
    "python-dotenv",
    "qdrant-client>=1.18.0",
    "rank-bm25",
    "sentence-transformers",
    "torch>=2.5.0",
]

[dependency-groups]
dev = ["mypy>=2.1.0", "pytest>=8.0.0", "ruff>=0.11.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
