[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zirag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "colpali-engine>=0.3.16",
    "google-genai>=2.4.0",
    "gradio>=6.0",
    "openai-whisper",
    "pillow",
    "pymupdf>=1.27.2.3",
    "python-dotenv",
    "qdrant-client>=1.18.0",
    "rank-bm25",
    "sentence-transformers",
]

[project.optional-dependencies]
cpu = ["torch>=2.5.0", "torchvision"]
cuda = ["torch>=2.5.0", "torchvision"]

[dependency-groups]
dev = ["mypy>=2.1.0", "pytest>=8.0.0", "ruff>=0.11.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cuda" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cuda" },
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
